--- a/stock-service/src/main/resources/application.yaml
+++ b/stock-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 
 server:
-  port: 8080
+  port: 8083
 
 spring:
   application:
@@ -18,6 +18,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+    javax:
+      persistence:
+        validation:
+          mode: none
+
 
 eureka:
   client:
