--- a/stock-service/src/main/resources/application.yaml
+++ b/stock-service/src/main/resources/application.yaml
@@ -1,7 +1,3 @@
-
-server:
-  port: 8083
-
 spring:
   application:
     name: stock-service
@@ -12,7 +8,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform:
     show-sql: true
     properties:
@@ -29,3 +25,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+server:
+  port: 0
