--- a/stock-service/src/main/resources/application.yaml
+++ b/stock-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform:
     show-sql: true
     properties:
