--- a/stock-service/src/main/resources/application.yaml
+++ b/stock-service/src/main/resources/application.yaml
@@ -25,5 +25,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}:${random.int}
 server:
   port: 0
