--- a/stock-service/src/main/resources/application.yaml
+++ b/stock-service/src/main/resources/application.yaml
@@ -1,31 +1,8 @@
 spring:
   application:
     name: stock-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/stock
-    username: root
-    password: 1234
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    database-platform:
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
-    javax:
-      persistence:
-        validation:
-          mode: none
-
-
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    instance-id: ${spring.application.name}:${random.int}
-server:
-  port: 0
+  cloud:
+    config:
+      profile: prod
+  config:
+    import: configserver:http://localhost:8888
