--- a/filter-service/src/main/resources/application.yml
+++ b/filter-service/src/main/resources/application.yml
@@ -3,6 +3,6 @@ spring:
     name: filter-service
   cloud:
     config:
-      profile: prod
+      profile: dev
   config:
     import: configserver:http://localhost:8888
