--- a/filter-service/pom.xml
+++ b/filter-service/pom.xml
@@ -15,6 +15,7 @@
 	<description>NoSQL related projects</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
